--- a/pages/about.html
+++ b/pages/about.html
@@ -9,5 +9,6 @@
 <body>
   <h1>About</h1>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem dolorum, temporibus necessitatibus excepturi provident consectetur quia officiis sint molestiae illo et doloribus. Aspernatur maxime, dignissimos quas quo tempora et.</p>
+  <img src="https://picsum.photos/500/350" alt="">
 </body>
 </html>
